rubocop/examples/good/style_IndentationConsistency.rb
# This cops checks for inconsistent indentation.

# good
def test
  puts 'hello'
  puts 'world'
end
