rubocop/examples/bad/style_IndentationConsistency.rb
# This cops checks for inconsistent indentation.

# bad
def test
  puts 'hello'
   puts 'world'
end
